--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -1639,12 +1639,60 @@
     }
    ],
    "source": [
+    "# it's just printing logits not probabilities. probabilities will be shown in the next cell.\n",
     "print(top5)\n",
     "\n",
     "sum=0\n",
     "for  i,pr,idx  in zip( range(5) , top5[0],top5[1]):\n",
     "    softmax_values = pr/np.sum(pr)\n",
     "    print(\"image\", i+1,\":\",softmax_values, \" / \", idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "image  0  --- 0.999999721847031  0.000000278063760  0.000000000088623  0.000000000000585  0.000000000000001   /  [25 31 29 22 30]\n",
+      "image  1  --- 0.674009441383641  0.323914437394833  0.001447165678182  0.000477416687274  0.000151538856071   /  [26 18 20 17 11]\n",
+      "image  2  --- 0.999999999989157  0.000000000007047  0.000000000003781  0.000000000000012  0.000000000000003   /  [ 1  5  2  3 15]\n",
+      "image  3  --- 0.626804012210195  0.264994783679059  0.108130340026681  0.000070459986446  0.000000404097619   /  [13 15 12  1 26]\n",
+      "image  4  --- 1.000000000000000  0.000000000000000  0.000000000000000  0.000000000000000  0.000000000000000   /  [14 17  5  1  3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "########################################################################\n",
+    "### Print out the top five softmax probabilities for the predictions  ##\n",
+    "########################################################################\n",
+    "\n",
+    "# I did it by stand alone code because it will take a lot of time to run whole code. I just made the variables top0 and top1. \n",
+    "# The values of these variables are the same as the variable top5 of upper cell!!\n",
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "top0     = np.array([[ 44.44266129,  29.34724617,  21.29602814,  16.27615929, 9.78890133],\n",
+    "                     [  7.8233881 ,   7.09062338,   1.67975092,   0.57077837, -0.57676923],\n",
+    "                     [ 33.67581558,   7.99736691,   7.37483215,   1.64076352, 0.14412104],\n",
+    "                     [ 15.23113823,  14.37021446,  13.47384167,   6.13779402, 0.97665024],\n",
+    "                     [ 62.75913239,   9.65332127,   8.77884579,   6.94516134, -4.66549683]])\n",
+    "top1 =np.array([[25, 31, 29, 22, 30],\n",
+    "               [26, 18, 20, 17, 11],\n",
+    "               [ 1,  5,  2,  3, 15],\n",
+    "               [13, 15, 12,  1, 26],\n",
+    "               [14, 17,  5,  1,  3]])\n",
+    "\n",
+    "\n",
+    "for i,item in enumerate(top0):\n",
+    "        print('image ' , i,' --- ', end='')  # to print in one line.\n",
+    "        line = tf.Session().run( tf.nn.softmax(item))\n",
+    "        for prob in line:\n",
+    "                print('{:.15f}  '.format(prob), end='')\n",
+    "        print(' / ',top1[i],end='')\n",
+    "        print('')"
    ]
   },
   {
@@ -1742,7 +1790,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.5.2"
+  },
+  "widgets": {
+   "state": {},
+   "version": "1.1.2"
   }
  },
  "nbformat": 4,
